# imlms

./: .gitignore  README.md  pyproject.toml
exercises/: H2.traj  ase_exercises.ipynb
lessons/: .gitignore  manage_notebooks.ipy
lessons/lesson_1/: README.md  numpy_exercises.ipynb  numpy_exercises_master.ipynb  numpy_exercises_solution.ipynb  oop_exercises.ipynb  oop_exercises_master.ipynb  oop_exercises_solution.ipynb  slides_lesson_1.pptx  torch_exercises.ipynb  torch_exercises_master.ipynb  torch_exercises_solution.ipynb
lessons/lesson_2/: README.md  ase_exercises.ipynb  ase_exercises_master.ipynb  ase_exercises_solution.ipynb  lesson_2.pptx  torch_exercises.ipynb  torch_exercises_solution.ipynb
lessons/lesson_3/: README.md  interatomic_potentials.ipynb  interatomic_potentials_solution.ipynb  lecture3.pptx  lj_exercises.ipynb  trainable_potentials.ipynb  trainable_potentials_solution.ipynb
lessons/lesson_4/: README.md  examples.py  neural_networks.ipynb
lessons/lesson_5/: README.md  descriptors.ipynb  lecture_5.pptx
lessons/lesson_6/: README.md  active_learning.ipynb  descriptors_continued.ipynb  graph_neural_networks.ipynb  lecture_6.pptx
src/imlms/: __init__.py  calculator_from_class.py
src/imlms/notebook/: __init__.py  make_notebooks.py  notebook_utils.py
src/imlms/potentials/: __init__.py  get_random_cluster.py  load_carbon_data.py  load_cluster_data.py  plot_parity.py  simple_lj_data.py
src/imlms/potentials/data/: rattle_data.npz
src/imlms/torch/: __init__.py  get_damped_osc_data.py  get_gd_data.py
(+7 files in other folders)
