[project]
name = "imlms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy<2.0",    
    "ase>=3.24.0",
    "ipykernel",
    "matplotlib>=3.10.0",
    "torch",
]

[project.scripts]
imlms = "imlms:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
